syntax = "proto3";

package io.odpf.firehose.consumer;

option java_multiple_files = true;
option java_package = "io.odpf.firehose.consumer";
option java_outer_classname = "TestMessageProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";

message TestKey {
    string order_number = 1;
    string order_url = 2;
}

message TestMessage {
    string order_number = 1;
    string order_url = 2;
    string order_details = 3;
}

message TestNestedMessage {
    string nested_id = 1;
    TestMessage single_message = 2;
}

message TestNestedRepeatedMessage {
    TestMessage single_message = 1;
    repeated TestMessage repeated_message = 2;
    int32 number_field = 3;
    repeated int32 repeated_number_field = 4;
}

message TestMapMessage {
    string order_number = 1;
    map<string, string> current_state = 2;
}

message TestDurationMessage {
    string order_number = 1;
    string order_url = 2;
    string order_details = 3;
    google.protobuf.Duration duration = 4;
    google.protobuf.Timestamp event_timestamp = 5;
}

message TestBytesMessage{
    string order_number = 1;
    bytes content = 2;
}

message TestStructMessage{
    string order_number = 1;
    google.protobuf.Struct custom_fields = 2;
    repeated google.protobuf.Struct list_custom_fields = 3;
}

message TestStatus{
    enum Enum{
        CREATED = 0;
        IN_PROGRESS = 1;
        COMPLETED = 2;
    }
}

message TestEnumMessage{
    string order_number = 1;
    TestStatus.Enum last_status = 2;
    repeated TestStatus.Enum status_history = 3;
}